Closed Bug 380590 Opened 17 years ago Closed 17 years ago

WARNING: Don't call ContinueInterruptedParsing on a blocked parser.: file nsParser.cpp, line 1105

Categories

(Core :: DOM: HTML Parser, defect)

x86
Linux
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: MatsPalmgren_bugz, Assigned: mrbkap)

References

()

Details

(Keywords: assertion)

Attachments

(2 files)

STEPS TO REPRODUCE
1. load URL
2. click in location bar
3. hit ENTER

ACTUAL RESULTS
WARNING: Don't call ContinueInterruptedParsing on a blocked parser.: file nsParser.cpp, line 1105

NOTE
The bug does not occur when clicking the Reload button.
The bug seems to occur on all story pages from http://news.bbc.co.uk/

PLATFORMS AND BUILDS TESTED
Bug occurs in SeaMonkey and Firefox trunk debug builds on Linux.
The problem here is in nsContentSink::ContinueInterruptedParsingAsync: It unblocks the parser and then adds an event to the event queue to continue the interrupted parsing. If, between the time that we added the event and process it, we get a chunk of data with an external script in it, the parser will become blocked and when we do process the event, we'll hit this warning.

HTML: Parser isn't really the right component for this.
Status: NEW → ASSIGNED
Attached patch Easiest fixSplinter Review
This is the easiest fix: if we're about to continue parsing as a result of an event, ensure that the parser is still unblocked. If it's currently blocked, then whatever blocked it has the task of unblocking it now.
Attachment #265536 - Flags: superreview?(jonas)
Attachment #265536 - Flags: review?(jonas)
Comment on attachment 265536 [details] [diff] [review]
Easiest fix

ContinueInterruptedParsingIfEnabled sounds like a better name for the new function.

r/sr=me with that
Attachment #265536 - Flags: superreview?(jonas)
Attachment #265536 - Flags: superreview+
Attachment #265536 - Flags: review?(jonas)
Attachment #265536 - Flags: review+
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Depends on: 387835
No longer depends on: 387835
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: