Don't assume that the parser is still enabled after we've returned to the event loop. bug 380590, r+sr=sicking